Bug 156030 - FILEOPEN RTF IF field is not imported
Summary: FILEOPEN RTF IF field is not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords:
Depends on:
Blocks: RTF-Fields
  Show dependency treegraph
 
Reported: 2023-06-23 07:30 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-18 20:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
The example file from Word 2016 (43.38 KB, application/msword)
2023-06-23 07:30 UTC, Gabor Kelemen (Collabora)
Details
The example file in Word and Writer with Field edit dialogs open (97.66 KB, image/png)
2023-06-23 07:31 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-06-23 07:30:59 UTC
Created attachment 188063 [details]
The example file from Word 2016

Attached example file contains two simple IF fields for which the condition and true/false case texts are not imported.

1. Open attached file
2. Right click the fields, select Edit field
-> The Condition, Then and Else boxes are empty.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 986c2d86a7b53a6599d014db7327f47cb33d4fea
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-06-23 07:31:35 UTC
Created attachment 188064 [details]
The example file in Word and Writer with Field edit dialogs open
Comment 2 Alec K 2023-06-26 15:13:05 UTC
Thank you for reporting the bug. I can confirm that the bug is present in:

Version: 7.5.4.2 (AARCH64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 10; OS: Mac OS X 13.4; UI render: default; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-07-17 13:57:19 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da2e7b1e0b58aed20d44b7c588ee86d922d614a8

tdf#156030: sw: better import of IF field for RTF and DOCX

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-07-18 20:15:39 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/8081bbcb2dd42508f8c306fe3b302392358fe892

tdf#156030: sw: better import of IF field for RTF and DOCX

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.