tdf#156030: sw: better import of IF field for RTF and DOCX

Since long time IF field was converted to ConditionalText, but no
parameters were given. So condition, then text and else text were
lost during import.

Change-Id: I9b45e8ab394f3c53bb34370bf3ea15a939a400fe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154101
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit d434104497fa1bea5744d5ce4e9447f75834ba55)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154530